[gd_scene load_steps=10 format=2]

[ext_resource path="res://Die.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameBoard.gd" type="Script" id=2]
[ext_resource path="res://DieFaces/BlankFace.tres" type="Resource" id=3]
[ext_resource path="res://DiceContainer.gd" type="Script" id=4]
[ext_resource path="res://DieFaces/AddFace.tres" type="Resource" id=5]
[ext_resource path="res://DieFaces/AddDieFace.tres" type="Resource" id=6]
[ext_resource path="res://Sprites/Special_Blank.png" type="Texture" id=7]
[ext_resource path="res://DieSpreadPopup.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Glow"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.984314, 1, 0.47451, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameBoard" type="Node"]
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dice" type="GridContainer" parent="CenterContainer"]
margin_left = 240.0
margin_top = 128.0
margin_right = 272.0
margin_bottom = 160.0
mouse_filter = 2
columns = 2
script = ExtResource( 4 )

[node name="Die" parent="CenterContainer/Dice" instance=ExtResource( 1 )]
modulate = Color( 0.999928, 1, 0.997591, 1 )
margin_right = 32.0
margin_bottom = 32.0
faces = [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/Dice/Die"]
anims/Glow = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -18.0
margin_top = 1.0
margin_right = 18.0
margin_bottom = 21.0
text = "Roll"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DieSpreadPopup" type="Node2D" parent="."]
visible = false
position = Vector2( 54, 54 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="DieSpreadPopup"]
position = Vector2( 0, -34 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="DieSpreadPopup"]
position = Vector2( 34, 0 )
texture = ExtResource( 7 )

[node name="Sprite3" type="Sprite" parent="DieSpreadPopup"]
texture = ExtResource( 7 )

[node name="Sprite4" type="Sprite" parent="DieSpreadPopup"]
position = Vector2( 0, 68 )
texture = ExtResource( 7 )

[node name="Sprite5" type="Sprite" parent="DieSpreadPopup"]
position = Vector2( -34, 0 )
texture = ExtResource( 7 )

[node name="Sprite6" type="Sprite" parent="DieSpreadPopup"]
position = Vector2( 0, 34 )
texture = ExtResource( 7 )

[node name="RollTimer" type="Timer" parent="."]
wait_time = 1.1
one_shot = true

[connection signal="die_cast" from="CenterContainer/Dice/Die" to="." method="die_cast"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="RollTimer" to="." method="resolve_actions"]
